Prevent notifications from overlapping navbar

--- a/src/app/pages/shared/toast-message/toast-message.component.scss
+++ b/src/app/pages/shared/toast-message/toast-message.component.scss
@@ -4,7 +4,7 @@
   position: absolute;
   right: 20px;
   top: 80px;
-  z-index: 10000;
+  z-index: 1;
   .wrapper {
     background: none;
   }
